Update JVM.ps1